Fix the popover position and arrow top/bottom alignment calc. Issue #1596.

--- a/source/assets/stylesheets/locastyle/modules/_popover.sass
+++ b/source/assets/stylesheets/locastyle/modules/_popover.sass
@@ -40,15 +40,13 @@ $colorBorderPop: rgba(0, 0, 0, 0.2)
   &.ls-popover-top
     &:after
       bottom: -$arrowWidth
-      left: 46.5%
-      margin-left: -8px
+      left: calc(50% - 10px)
       border-width: $arrowWidth $arrowWidth 0 $arrowWidth
       border-color: $colorArrow transparent transparent transparent
 
     &:before
       bottom: -($arrowWidth + 1)
-      left: 46.5%
-      margin-left: -8px
+      left: calc(50% - 10px)
       border-width: $arrowWidth $arrowWidth 0 $arrowWidth
       border-color: $colorBorderPop transparent transparent transparent
 
@@ -70,13 +68,13 @@ $colorBorderPop: rgba(0, 0, 0, 0.2)
   &.ls-popover-bottom
     &:after
       top: -$arrowWidth
-      left: 46.5%
+      left: calc(50% - 10px)
       border-width: 0 $arrowWidth $arrowWidth $arrowWidth
       border-color: transparent transparent #f7f7f7 transparent
 
     &:before
       top: -($arrowWidth + 1)
-      left: 46.5%
+      left: calc(50% - 10px)
       border-width: 0 $arrowWidth $arrowWidth $arrowWidth
       border-color: transparent transparent $colorBorderPop transparent
 
